# wisp-mode

./: .hgsigs  .hgtags  AUTHORS  AUTHORS.in  Changelog  Makefile.am  NEWS  README  README.md  Readme.txt  bootstrap-reader.sh  bootstrap.sh  configure.ac  console.py  d6.w  example.w  fib.w  get1.w  hello-world-server.w  multithreaded-magic.w  ob-wisp.el  testrunner.w  unicode-math-fun.w  wisp-call.sh  wisp-guile.w  wisp-mode.el  wisp-multiline.sh  wisp-reader.w  wisp-repl-guile.sh  wisp-scheme.w  wisp.el  wisp.in  wisp.py  wisp.w
.bugs/: bugs  bugs.orig
docs/: fosdem2016.org  fosdem2019.org  interactive-run.txt  srfi-from-template.html  srfi-testsuite.html  srfi.html  srfi.org  tutorial.org  uniinput.sty  why-wisp.org
docs/_minted-fosdem2019/: default.pygstyle
docs/srfi-119/: README  bootstrap.sh  wisp-bootstrap.py  wisp-guile.scm  wisp-scheme.scm  wisp-scheme.w
examples/: Makefile  advent-2016-day-7.w  argparse.scm  argparse.w  benchmark.scm  benchmark.w  bits-as-numberstring.w  cartesian-sets.scm  cartesian-sets.w  cholesky.scm  cholesky.w  cli.scm  cli.w  closure.scm  closure.w  coffee.scm  coffee.w  commandline-handling.scm  commandline-handling.w  comment-server.scm  comment-server.w  d20world.scm  d20world.w  d6.scm  d6.w  doctests-test.scm  doctests-test.w  doctests-testone.scm  doctests.scm  doctests.w  doctestss-testone.scm  downloadmesh.scm  downloadmesh.w  duel.scm  duel.w  ensemble-estimation.scm  ensemble-estimation.w  enter-three-witches.scm  enter-three-witches.w  evaluate-r7rs-benchmark.gnuplot  (+73 more)
guildhall-packages/: newbase60.scm  pkg-list.scm
guildhall-packages/newbase60/: pkg-list.scm
racket/: parse.rkt  wisp.rkt
tests/: btest.scm  btest.w  continuation.scm  continuation.w  dotted-pair.scm  dotted-pair.w  emacs-customization-tex-master.scm  emacs-customization-tex-master.w  emacs-customization.scm  emacs-customization.w  example.scm  example.w  factorial.scm  factorial.w  fast-sum.scm  fast-sum.w  flexible-parameter-list.scm  flexible-parameter-list.w  hello.scm  hello.w  linebreaks.scm  linebreaks.w  literalarray.scm  literalarray.w  mtest.scm  mtest.w  multiline-string.scm  multiline-string.w  namedlet.scm  namedlet.w  partial-indent.scm  partial-indent.w  quotecolon.scm  quotecolon.w  range.scm  range.w  readable-tests.scm  readable-tests.w  realpath.sh  receive.scm  (+25 more)
